--- a/PreProcessingNotes.ipynb
+++ b/PreProcessingNotes.ipynb
@@ -377,8 +377,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "439bdd1f-1ba7-4d66-a5e2-6c9e4e498385",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Weight_scaled  Gender_Female  Gender_Male  Country_Canada  Country_USA\n",
+      "0      -1.414214            0.0          1.0             0.0          1.0\n",
+      "1      -0.707107            1.0          0.0             1.0          0.0\n",
+      "2       0.000000            1.0          0.0             0.0          1.0\n",
+      "3       0.707107            0.0          1.0             1.0          0.0\n",
+      "4       1.414214            0.0          1.0             0.0          1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Problem 5: Custom Dataset\n",
+    "# Prompt: Problem: You have a dataset with three columns: Weight, Gender, and Country. \n",
+    "# The Weight column contains [60, 70, 80, 90, 100], \n",
+    "# The Gender column contains ['Male', 'Female', 'Female', 'Male', 'Male'],\n",
+    "# and the Country column contains ['USA', 'Canada', 'USA', 'Canada', 'USA']. \n",
+    "#Write a script to create a pipeline that scales the Weight column and applies one-hot encoding to both the Gender and Country columns.\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "data = {\n",
+    "    'Weight': [60, 70, 80, 90, 100],\n",
+    "    'Gender': ['Male', 'Female', 'Female', 'Male', 'Male'],\n",
+    "    'Country': ['USA', 'Canada', 'USA', 'Canada', 'USA']\n",
+    "}\n",
+    "df = pd.DataFrame(data, columns=['Weight','Gender','Country'])\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers= [\n",
+    "        ('num', StandardScaler(),['Weight']),\n",
+    "        ('cat',OneHotEncoder(),['Gender','Country'])\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "pipeline = Pipeline(steps=[('preprocessor',preprocessor)])\n",
+    "\n",
+    "preprocessed_data = pipeline.fit_transform(df)\n",
+    "\n",
+    "# preprocessed_frame = pd.DataFrame(preprocessed_data)\n",
+    "# preprocessed_frame\n",
+    "\n",
+    "# Get feature names\n",
+    "# Extract column names for the OneHotEncoded part\n",
+    "one_hot_columns = preprocessor.named_transformers_['cat'].get_feature_names_out(['Gender', 'Country'])\n",
+    "# Combine with the numeric column\n",
+    "column_names = ['Weight_scaled'] + one_hot_columns.tolist()\n",
+    "\n",
+    "# Create the DataFrame with the correct column names\n",
+    "preprocessed_frame = pd.DataFrame(preprocessed_data, columns=column_names)\n",
+    "print(preprocessed_frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fc38eee8-f780-45bc-b912-3092873c1c47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prices_scaled</th>\n",
+       "      <th>Product_A</th>\n",
+       "      <th>Product_B</th>\n",
+       "      <th>Product_C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.341641</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.447214</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.447214</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.341641</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Prices_scaled  Product_A  Product_B  Product_C\n",
+       "0      -1.341641        1.0        0.0        0.0\n",
+       "1       0.447214        0.0        1.0        0.0\n",
+       "2      -0.447214        1.0        0.0        0.0\n",
+       "3       1.341641        0.0        0.0        1.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Problem 6: Combining OneHotEncoder and Standard Scaler\n",
+    "# Prompt: Create a pipeline that first standardizes the numeric column Price and then applies one-hot encoding to the categorical column Product. \n",
+    "# The Price column contains [10, 20, 15, 25],\n",
+    "# Product column contains ['A', 'B', 'A', 'C']. \n",
+    "# Write a script to achieve this\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "data = {\n",
+    "    'Price': [10,20,15,25],\n",
+    "    'Product': ['A','B','A','C']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data,columns=['Price','Product'])\n",
+    "\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers = [\n",
+    "        ('num', StandardScaler(),['Price']),\n",
+    "        ('cat',OneHotEncoder(),['Product'])\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "pipeline = Pipeline(steps=[('preprocessor',preprocessor)])\n",
+    "\n",
+    "preprocessor_data = pipeline.fit_transform(df)\n",
+    "\n",
+    "one_hot_columns = preprocessor.named_transformers_['cat'].get_feature_names_out(['Product'])\n",
+    "column_names = ['Prices_scaled'] + one_hot_columns.tolist()\n",
+    "\n",
+    "preprocessor_df = pd.DataFrame(preprocessor_data, columns = column_names)\n",
+    "preprocessor_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "853fe9c5-8224-4625-9b95-e59a91fbbeab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Age_scaled  Income_scaled  City_Chicago  City_New York  City_San Francisco\n",
+      "0   -1.341641      -1.341641           0.0            1.0                 0.0\n",
+      "1   -0.447214      -0.447214           1.0            0.0                 0.0\n",
+      "2    0.447214       0.447214           0.0            0.0                 1.0\n",
+      "3    1.341641       1.341641           0.0            1.0                 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Problem 7: Pipeline with Mixed Data Types\n",
+    "# Prompt: You have a dataset with three columns: Age, City, and Income.\n",
+    "# The Age column contains [25, 30, 35, 40]\n",
+    "# City column contains ['New York', 'Chicago', 'San Francisco', 'New York']\n",
+    "# Income column contains [50000, 60000, 70000, 80000].\n",
+    "# Create a pipeline that scales the Age and Income columns and applies one-hot encoding to the City column\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Creating the initial DataFrame\n",
+    "data = {\n",
+    "    'Age': [25, 30, 35, 40],\n",
+    "    'City': ['New York', 'Chicago', 'San Francisco', 'New York'],\n",
+    "    'Income': [50000, 60000, 70000, 80000]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data, columns=['Age', 'City', 'Income'])\n",
+    "\n",
+    "# Preprocessor\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', StandardScaler(), ['Age', 'Income']),\n",
+    "        ('cat', OneHotEncoder(), ['City'])\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "pipeline = Pipeline(steps=[('preprocessor', preprocessor)])\n",
+    "\n",
+    "# Fit the pipeline\n",
+    "pipeline.fit(df)\n",
+    "\n",
+    "# Get the feature names\n",
+    "one_hot_columns = pipeline.named_steps['preprocessor'].named_transformers_['cat'].get_feature_names_out(['City'])\n",
+    "# Combine with the numeric columns\n",
+    "column_names = ['Age_scaled', 'Income_scaled'] + one_hot_columns.tolist()\n",
+    "\n",
+    "# Transform the data\n",
+    "preprocessed_data = pipeline.transform(df)\n",
+    "\n",
+    "# Create a new DataFrame using the preprocessed data\n",
+    "preprocessed_frame = pd.DataFrame(preprocessed_data, columns=column_names)\n",
+    "print(preprocessed_frame)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dd57b62-8c29-473a-83f5-687e8a441f87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e223160-1d22-4dd9-9300-0b4a71ca8b2f",
    "metadata": {},
    "outputs": [],
    "source": []
