--- a/W2_BMEG4983.ipynb
+++ b/W2_BMEG4983.ipynb
@@ -1246,10 +1246,10 @@
       ],
       "metadata": {
         "id": "uG-C5Hplzujp",
-        "outputId": "abe9bae9-22ff-4fca-fd8c-9590796fa71c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "abe9bae9-22ff-4fca-fd8c-9590796fa71c"
       },
       "execution_count": 1,
       "outputs": [
@@ -1337,10 +1337,10 @@
       ],
       "metadata": {
         "id": "DOJqGl4Dzzyb",
-        "outputId": "41563ee6-c42b-40cb-9665-f0f64085b64e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "41563ee6-c42b-40cb-9665-f0f64085b64e"
       },
       "execution_count": 3,
       "outputs": [
@@ -1377,62 +1377,48 @@
     {
       "cell_type": "code",
       "source": [
-        "def find_longest_orf(sequence):\n",
-        "  \"\"\"Finds the longest open reading frame (ORF) in a sequence.\n",
+        "import re\n",
         "\n",
-        "  Args:\n",
-        "    sequence: The input DNA or RNA sequence as a string.\n",
+        "def find_orfs(sequence):\n",
+        "    \"\"\"Finds all Open Reading Frames (ORFs) in a given DNA sequence and returns the longest one.\"\"\"\n",
+        "    start_codon = \"ATG\"\n",
+        "    stop_codons = {\"TAA\", \"TAG\", \"TGA\"}\n",
+        "    orfs = []\n",
         "\n",
-        "  Returns:\n",
-        "    The longest ORF as a string.\n",
-        "  \"\"\"\n",
+        "    for frame in range(3):\n",
+        "        i = frame\n",
+        "        while i < len(sequence) - 2:\n",
+        "            if sequence[i:i+3] == start_codon:\n",
+        "                for j in range(i+3, len(sequence) - 2, 3):\n",
+        "                    codon = sequence[j:j+3]\n",
+        "                    if codon in stop_codons:\n",
+        "                        orfs.append(sequence[i:j+3])\n",
+        "                        break\n",
+        "            i += 3\n",
         "\n",
-        "  # Define start and stop codons\n",
-        "  start_codon = \"ATG\"\n",
-        "  stop_codons = [\"TAA\", \"TAG\", \"TGA\"]\n",
+        "    return max(orfs, key=len) if orfs else None, orfs\n",
         "\n",
-        "  longest_orf = \"\"\n",
-        "\n",
-        "  # Iterate through all possible reading frames\n",
-        "  for frame in range(3):\n",
-        "    for i in range(frame, len(sequence) - 2, 3):\n",
-        "      codon = sequence[i:i + 3]\n",
-        "\n",
-        "      # Check if it's a start codon\n",
-        "      if codon == start_codon:\n",
-        "        orf = codon  # Initialize orf with the start codon\n",
-        "\n",
-        "        # Continue until a stop codon is found\n",
-        "        for j in range(i + 3, len(sequence) - 2, 3):\n",
-        "          next_codon = sequence[j:j + 3]\n",
-        "          orf += next_codon\n",
-        "          if next_codon in stop_codons:\n",
-        "            # If ORF is longer than longest_orf then update the longest_orf\n",
-        "            if len(orf) > len(longest_orf):\n",
-        "              longest_orf = orf\n",
-        "            break  # Stop when a stop codon is encountered\n",
-        "\n",
-        "  return longest_orf\n",
-        "\n",
-        "# Example usage\n",
-        "my_seq = \"GGCGAAAACGAGGAGGATATTACAATAAATGGA\"\n",
-        "longest_orf = find_longest_orf(my_seq)\n",
-        "print(longest_orf)  # Output: ATGGA"
+        "# Example usage:\n",
+        "dna_sequence = \"AAGATGCGTAAATGCCCTAGATGTGA\"\n",
+        "longest_orf, all_orfs = find_orfs(dna_sequence)\n",
+        "print(\"Longest ORF:\", longest_orf)\n",
+        "print(\"All ORFs:\", all_orfs)"
       ],
       "metadata": {
-        "id": "7mfw94_O4HvE",
-        "outputId": "e88940a3-d3e1-4b82-c032-8802598de84c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7mfw94_O4HvE",
+        "outputId": "9644eaa0-7f87-44b4-ea0b-8aefb436dcc9"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n"
+            "Longest ORF: ATGCCCTAG\n",
+            "All ORFs: ['ATGCCCTAG', 'ATGTGA']\n"
           ]
         }
       ]
@@ -1463,6 +1449,79 @@
       "metadata": {
         "id": "ylh30d5Zggkw"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def is_safe(board, row, col, n):\n",
+        "    \"\"\"Check if a queen can be placed at board[row][col] without being attacked.\"\"\"\n",
+        "    for i in range(col):\n",
+        "        if board[row][i]:\n",
+        "            return False\n",
+        "\n",
+        "    for i, j in zip(range(row, -1, -1), range(col, -1, -1)):\n",
+        "        if board[i][j]:\n",
+        "            return False\n",
+        "\n",
+        "    for i, j in zip(range(row, n, 1), range(col, -1, -1)):\n",
+        "        if board[i][j]:\n",
+        "            return False\n",
+        "\n",
+        "    return True\n",
+        "\n",
+        "def solve_n_queens_util(board, col, n, solutions):\n",
+        "    \"\"\"Recursively solve the N-Queens problem and store solutions.\"\"\"\n",
+        "    if col >= n:\n",
+        "        solutions.append([row[:] for row in board])\n",
+        "        return\n",
+        "\n",
+        "    for i in range(n):\n",
+        "        if is_safe(board, i, col, n):\n",
+        "            board[i][col] = 1\n",
+        "            solve_n_queens_util(board, col + 1, n, solutions)\n",
+        "            board[i][col] = 0\n",
+        "\n",
+        "def solve_n_queens(n):\n",
+        "    \"\"\"Solves the N-Queens problem and returns all solutions.\"\"\"\n",
+        "    board = [[0] * n for _ in range(n)]\n",
+        "    solutions = []\n",
+        "    solve_n_queens_util(board, 0, n, solutions)\n",
+        "    return solutions\n",
+        "\n",
+        "# Example usage:\n",
+        "n = 4  # Change to 8 for the full 8-Queens problem\n",
+        "solutions = solve_n_queens(n)\n",
+        "for sol in solutions:\n",
+        "    for row in sol:\n",
+        "        print(\" \".join(\"Q\" if cell else \".\" for cell in row))\n",
+        "    print()"
+      ],
+      "metadata": {
+        "id": "9-tJmC5lggx7",
+        "outputId": "9a2ad94c-0117-4013-846d-ec02f914170e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ". . Q .\n",
+            "Q . . .\n",
+            ". . . Q\n",
+            ". Q . .\n",
+            "\n",
+            ". Q . .\n",
+            ". . . Q\n",
+            "Q . . .\n",
+            ". . Q .\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1524,26 +1583,26 @@
         "#@title Learning Check (input answers and hit play button)\n",
         "\n",
         "#@markdown Q1: I've been to UCSC genome browser and found my gene\n",
-        "answer1 = ' ' #@param [\" \",\"Yes\", \"No\"]\n",
+        "answer1 = 'Yes' #@param [\" \",\"Yes\", \"No\"]\n",
         "\n",
         "#@markdown Q2: I've been to NCBI and found my gene\n",
-        "answer2 = ' ' #@param [\" \",\"Yes\", \"No\"]\n",
+        "answer2 = 'Yes' #@param [\" \",\"Yes\", \"No\"]\n",
         "\n",
         "\n",
         "#@markdown Q3: What two nucleotides were before every exon in your gene?\n",
         "\n",
         "#@markdown If your gene is running from right to left, don't forget to reverse complement\n",
-        "answer3 = ' ' #@param [\" \",\"CG\", \"GG\",\"GT\",\"NN\",\"AG\", \"GA\"]\n",
+        "answer3 = 'AG' #@param [\" \",\"CG\", \"GG\",\"GT\",\"NN\",\"AG\", \"GA\"]\n",
         "\n",
         "\n",
         "#@markdown Q4: Which one of these would be first in order for a gene?\n",
-        "answer4 = ' ' #@param [\" \",\"intron\", \"exon\",\"promoter\",\"5'UTR\",\"3'UTR\", \"Transcription Stop\"]\n",
+        "answer4 = 'promoter' #@param [\" \",\"intron\", \"exon\",\"promoter\",\"5'UTR\",\"3'UTR\", \"Transcription Stop\"]\n",
         "\n",
         "\n",
         "#@markdown Q5: What organism is this sequence likely from?\n",
         "\n",
         "#@markdown Sequence = \"cgcaatttacaacacagactttatgagtgtctctatagaaatagagatgttgacacagac\"\n",
-        "answer5 = \"\" #@param [\"\", \"human\", \"mouse\", \"aligator\", \"SARS-CoV-2\"]\n",
+        "answer5 = \"SARS-CoV-2\" #@param [\"\", \"human\", \"mouse\", \"aligator\", \"SARS-CoV-2\"]\n",
         "\n",
         "if (answer1 == \"Yes\"):\n",
         "  print('Q1: Good')\n",
@@ -1575,9 +1634,9 @@
         },
         "cellView": "form",
         "id": "IhvaTFPt7hC0",
-        "outputId": "f1f94ce5-5b42-4eae-8cb8-1f4890d28e4d"
+        "outputId": "c5f56c33-7a9b-45a7-be69-839142063bfe"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
